--- a/notebooks/pyfocs_ex2_calibcheck.ipynb
+++ b/notebooks/pyfocs_ex2_calibcheck.ipynb
@@ -65,16 +65,16 @@
     "]\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[0])\n",
-    "cfg_ss, lib_ss = pyfocs.check.config(cfg_fname, ignore_flags=True)\n",
+    "cfg_ss, lib_ss = pyfocs.check.config(cfg_fname, ignore_flags=False)\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[1])\n",
-    "cfg_both, lib_both = pyfocs.check.config(cfg_fname, ignore_flags=True)\n",
+    "cfg_both, lib_both = pyfocs.check.config(cfg_fname, ignore_flags=False)\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[2])\n",
-    "cfg_p1, lib_p1 = pyfocs.check.config(cfg_fname, ignore_flags=True)\n",
+    "cfg_p1, lib_p1 = pyfocs.check.config(cfg_fname, ignore_flags=False)\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[3])\n",
-    "cfg_p2, lib_p2 = pyfocs.check.config(cfg_fname, ignore_flags=True)\n"
+    "cfg_p2, lib_p2 = pyfocs.check.config(cfg_fname, ignore_flags=False)\n"
    ]
   },
   {
