revert last change
'ignore_flags' was turbed back to 'True' in line 62 and 65, restoring the former state.
The issue leading to the change was instead solved in check.py.

--- a/notebooks/pyfocs_ex1_rawdatacheck.ipynb
+++ b/notebooks/pyfocs_ex1_rawdatacheck.ipynb
@@ -59,10 +59,10 @@
     "]\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[0])\n",
-    "cfg_ss, lib_ss = pyfocs.check.config(cfg_fname, ignore_flags=False)\n",
+    "cfg_ss, lib_ss = pyfocs.check.config(cfg_fname, ignore_flags=True)\n",
     "\n",
     "cfg_fname = os.path.join(dir_example, config_names[1])\n",
-    "cfg_pvc, lib_pvc = pyfocs.check.config(cfg_fname, ignore_flags=False)\n"
+    "cfg_pvc, lib_pvc = pyfocs.check.config(cfg_fname, ignore_flags=True)\n"
    ]
   },
   {
